// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entrypoint adds validators into fieldsets 1`] = `
{
  "kind": "record",
  "nullable": false,
  "record": {
    "name": {
      "kind": "field",
      "nullable": false,
      "required": true,
      "type": "text",
      "validators": [
        {
          "args": [
            {
              "type": "integer",
              "value": 4,
            },
          ],
          "inputType": "text",
          "name": "minLength",
        },
        {
          "args": [
            {
              "type": "integer",
              "value": 100,
            },
          ],
          "inputType": "text",
          "name": "maxLength",
        },
      ],
    },
  },
}
`;

exports[`entrypoint collects dependencies 1`] = `
{
  "actionSelects": [
    [
      "name",
      "id",
    ],
    [],
  ],
  "orgSelect": [
    "id",
    "name",
    "desc",
    "repoCount",
    "coef",
  ],
  "repoSelect": [
    "name",
    "id",
  ],
}
`;

exports[`entrypoint composes basic example 1`] = `
[
  {
    "endpoints": [
      {
        "authSelect": [],
        "authorize": undefined,
        "filter": undefined,
        "kind": "list",
        "orderBy": [
          {
            "direction": "desc",
            "exp": {
              "kind": "alias",
              "namePath": [
                "Org",
                "slug",
              ],
            },
          },
        ],
        "pageable": true,
        "parentContext": [],
        "response": [
          {
            "alias": "id",
            "expr": {
              "kind": "alias",
              "namePath": [
                "Org",
                "id",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "integer",
              "nullable": false,
            },
          },
          {
            "alias": "slug",
            "expr": {
              "kind": "alias",
              "namePath": [
                "Org",
                "slug",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "text",
              "nullable": false,
            },
          },
          {
            "alias": "name",
            "expr": {
              "kind": "alias",
              "namePath": [
                "Org",
                "name",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "text",
              "nullable": false,
            },
          },
        ],
        "target": {
          "alias": "org",
          "kind": "model",
          "name": "Org",
          "namePath": [
            "Org",
          ],
          "retType": "Org",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "alias",
                "namePath": [
                  "Org",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
        },
      },
      {
        "authSelect": [],
        "authorize": undefined,
        "kind": "get",
        "parentContext": [],
        "response": [
          {
            "alias": "id",
            "expr": {
              "kind": "alias",
              "namePath": [
                "Org",
                "id",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "integer",
              "nullable": false,
            },
          },
          {
            "alias": "slug",
            "expr": {
              "kind": "alias",
              "namePath": [
                "Org",
                "slug",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "text",
              "nullable": false,
            },
          },
          {
            "alias": "name",
            "expr": {
              "kind": "alias",
              "namePath": [
                "Org",
                "name",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "text",
              "nullable": false,
            },
          },
        ],
        "target": {
          "alias": "org",
          "identifyWith": {
            "name": "slug",
            "paramName": "org_slug",
            "refKey": "Org.slug",
            "type": "text",
          },
          "kind": "model",
          "name": "Org",
          "namePath": [
            "Org",
          ],
          "retType": "Org",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "alias",
                "namePath": [
                  "Org",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
        },
      },
    ],
    "entrypoints": [
      {
        "endpoints": [
          {
            "authSelect": [],
            "authorize": undefined,
            "filter": undefined,
            "kind": "list",
            "orderBy": undefined,
            "pageable": false,
            "parentContext": [
              {
                "alias": "org",
                "identifyWith": {
                  "name": "slug",
                  "paramName": "org_slug",
                  "refKey": "Org.slug",
                  "type": "text",
                },
                "kind": "model",
                "name": "Org",
                "namePath": [
                  "Org",
                ],
                "retType": "Org",
                "select": [
                  {
                    "alias": "id",
                    "expr": {
                      "kind": "alias",
                      "namePath": [
                        "Org",
                        "id",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "integer",
                      "nullable": false,
                    },
                  },
                ],
              },
            ],
            "response": [
              {
                "alias": "id",
                "expr": {
                  "kind": "alias",
                  "namePath": [
                    "Org",
                    "repos",
                    "id",
                  ],
                },
                "kind": "expression",
                "type": {
                  "kind": "integer",
                  "nullable": false,
                },
              },
              {
                "alias": "org",
                "kind": "nested-select",
                "namePath": [
                  "Org",
                  "repos",
                  "org",
                ],
                "refKey": "Repo.org",
                "select": [
                  {
                    "alias": "id",
                    "expr": {
                      "kind": "alias",
                      "namePath": [
                        "Org",
                        "repos",
                        "org",
                        "id",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "integer",
                      "nullable": false,
                    },
                  },
                  {
                    "alias": "slug",
                    "expr": {
                      "kind": "alias",
                      "namePath": [
                        "Org",
                        "repos",
                        "org",
                        "slug",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "text",
                      "nullable": false,
                    },
                  },
                  {
                    "alias": "name",
                    "expr": {
                      "kind": "alias",
                      "namePath": [
                        "Org",
                        "repos",
                        "org",
                        "name",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "text",
                      "nullable": false,
                    },
                  },
                ],
              },
            ],
            "target": {
              "alias": "$target_1",
              "kind": "relation",
              "name": "repos",
              "namePath": [
                "Org",
                "repos",
              ],
              "retType": "Repo",
              "select": [
                {
                  "alias": "id",
                  "expr": {
                    "kind": "alias",
                    "namePath": [
                      "Org",
                      "repos",
                      "id",
                    ],
                  },
                  "kind": "expression",
                  "type": {
                    "kind": "integer",
                    "nullable": false,
                  },
                },
              ],
            },
          },
          {
            "authSelect": [],
            "authorize": undefined,
            "kind": "get",
            "parentContext": [
              {
                "alias": "org",
                "identifyWith": {
                  "name": "slug",
                  "paramName": "org_slug",
                  "refKey": "Org.slug",
                  "type": "text",
                },
                "kind": "model",
                "name": "Org",
                "namePath": [
                  "Org",
                ],
                "retType": "Org",
                "select": [
                  {
                    "alias": "id",
                    "expr": {
                      "kind": "alias",
                      "namePath": [
                        "Org",
                        "id",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "integer",
                      "nullable": false,
                    },
                  },
                ],
              },
            ],
            "response": [
              {
                "alias": "id",
                "expr": {
                  "kind": "alias",
                  "namePath": [
                    "Org",
                    "repos",
                    "id",
                  ],
                },
                "kind": "expression",
                "type": {
                  "kind": "integer",
                  "nullable": false,
                },
              },
              {
                "alias": "org",
                "kind": "nested-select",
                "namePath": [
                  "Org",
                  "repos",
                  "org",
                ],
                "refKey": "Repo.org",
                "select": [
                  {
                    "alias": "id",
                    "expr": {
                      "kind": "alias",
                      "namePath": [
                        "Org",
                        "repos",
                        "org",
                        "id",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "integer",
                      "nullable": false,
                    },
                  },
                  {
                    "alias": "slug",
                    "expr": {
                      "kind": "alias",
                      "namePath": [
                        "Org",
                        "repos",
                        "org",
                        "slug",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "text",
                      "nullable": false,
                    },
                  },
                  {
                    "alias": "name",
                    "expr": {
                      "kind": "alias",
                      "namePath": [
                        "Org",
                        "repos",
                        "org",
                        "name",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "text",
                      "nullable": false,
                    },
                  },
                ],
              },
            ],
            "target": {
              "alias": "$target_1",
              "identifyWith": {
                "name": "id",
                "paramName": "repo_id",
                "refKey": "Repo.id",
                "type": "integer",
              },
              "kind": "relation",
              "name": "repos",
              "namePath": [
                "Org",
                "repos",
              ],
              "retType": "Repo",
              "select": [
                {
                  "alias": "id",
                  "expr": {
                    "kind": "alias",
                    "namePath": [
                      "Org",
                      "repos",
                      "id",
                    ],
                  },
                  "kind": "expression",
                  "type": {
                    "kind": "integer",
                    "nullable": false,
                  },
                },
              ],
            },
          },
          {
            "actions": [
              {
                "alias": "$action_0",
                "changeset": [
                  {
                    "name": "title",
                    "setter": {
                      "fieldsetAccess": [
                        "title",
                      ],
                      "kind": "fieldset-input",
                      "required": true,
                      "type": "text",
                    },
                  },
                  {
                    "name": "org_id",
                    "setter": {
                      "kind": "reference-value",
                      "target": {
                        "access": [
                          "id",
                        ],
                        "alias": "org",
                      },
                    },
                  },
                ],
                "isPrimary": true,
                "kind": "create-one",
                "model": "Repo",
                "select": [],
                "targetPath": [
                  "repos",
                ],
              },
            ],
            "authSelect": [],
            "authorize": undefined,
            "fieldset": {
              "kind": "record",
              "nullable": false,
              "record": {
                "title": {
                  "kind": "field",
                  "nullable": false,
                  "required": true,
                  "type": "text",
                  "validators": [],
                },
              },
            },
            "kind": "create",
            "parentContext": [
              {
                "alias": "org",
                "identifyWith": {
                  "name": "slug",
                  "paramName": "org_slug",
                  "refKey": "Org.slug",
                  "type": "text",
                },
                "kind": "model",
                "name": "Org",
                "namePath": [
                  "Org",
                ],
                "retType": "Org",
                "select": [
                  {
                    "alias": "id",
                    "expr": {
                      "kind": "alias",
                      "namePath": [
                        "Org",
                        "id",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "integer",
                      "nullable": false,
                    },
                  },
                ],
              },
            ],
            "response": [
              {
                "alias": "id",
                "expr": {
                  "kind": "alias",
                  "namePath": [
                    "Org",
                    "repos",
                    "id",
                  ],
                },
                "kind": "expression",
                "type": {
                  "kind": "integer",
                  "nullable": false,
                },
              },
              {
                "alias": "org",
                "kind": "nested-select",
                "namePath": [
                  "Org",
                  "repos",
                  "org",
                ],
                "refKey": "Repo.org",
                "select": [
                  {
                    "alias": "id",
                    "expr": {
                      "kind": "alias",
                      "namePath": [
                        "Org",
                        "repos",
                        "org",
                        "id",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "integer",
                      "nullable": false,
                    },
                  },
                  {
                    "alias": "slug",
                    "expr": {
                      "kind": "alias",
                      "namePath": [
                        "Org",
                        "repos",
                        "org",
                        "slug",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "text",
                      "nullable": false,
                    },
                  },
                  {
                    "alias": "name",
                    "expr": {
                      "kind": "alias",
                      "namePath": [
                        "Org",
                        "repos",
                        "org",
                        "name",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "text",
                      "nullable": false,
                    },
                  },
                ],
              },
            ],
            "target": {
              "alias": "$target_1",
              "kind": "relation",
              "name": "repos",
              "namePath": [
                "Org",
                "repos",
              ],
              "retType": "Repo",
              "select": [
                {
                  "alias": "id",
                  "expr": {
                    "kind": "alias",
                    "namePath": [
                      "Org",
                      "repos",
                      "id",
                    ],
                  },
                  "kind": "expression",
                  "type": {
                    "kind": "integer",
                    "nullable": false,
                  },
                },
              ],
            },
          },
          {
            "actions": [
              {
                "alias": "newOrg",
                "changeset": [
                  {
                    "name": "slug",
                    "setter": {
                      "fieldsetAccess": [
                        "newOrg",
                        "slug",
                      ],
                      "kind": "fieldset-input",
                      "required": false,
                      "type": "text",
                    },
                  },
                  {
                    "name": "name",
                    "setter": {
                      "fieldsetAccess": [
                        "newOrg",
                        "name",
                      ],
                      "kind": "fieldset-input",
                      "required": false,
                      "type": "text",
                    },
                  },
                ],
                "filter": undefined,
                "isPrimary": false,
                "kind": "update-one",
                "model": "Org",
                "select": [],
                "targetPath": [
                  "org",
                ],
              },
            ],
            "authSelect": [],
            "authorize": undefined,
            "fieldset": {
              "kind": "record",
              "nullable": false,
              "record": {
                "newOrg": {
                  "kind": "record",
                  "nullable": false,
                  "record": {
                    "name": {
                      "kind": "field",
                      "nullable": false,
                      "required": false,
                      "type": "text",
                      "validators": [],
                    },
                    "slug": {
                      "kind": "field",
                      "nullable": false,
                      "required": false,
                      "type": "text",
                      "validators": [],
                    },
                  },
                },
              },
            },
            "kind": "custom-one",
            "method": "PATCH",
            "parentContext": [
              {
                "alias": "org",
                "identifyWith": {
                  "name": "slug",
                  "paramName": "org_slug",
                  "refKey": "Org.slug",
                  "type": "text",
                },
                "kind": "model",
                "name": "Org",
                "namePath": [
                  "Org",
                ],
                "retType": "Org",
                "select": [
                  {
                    "alias": "id",
                    "expr": {
                      "kind": "alias",
                      "namePath": [
                        "Org",
                        "id",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "integer",
                      "nullable": false,
                    },
                  },
                ],
              },
            ],
            "path": "somePath",
            "responds": true,
            "response": undefined,
            "target": {
              "alias": "$target_1",
              "identifyWith": {
                "name": "id",
                "paramName": "repo_id",
                "refKey": "Repo.id",
                "type": "integer",
              },
              "kind": "relation",
              "name": "repos",
              "namePath": [
                "Org",
                "repos",
              ],
              "retType": "Repo",
              "select": [
                {
                  "alias": "id",
                  "expr": {
                    "kind": "alias",
                    "namePath": [
                      "Org",
                      "repos",
                      "id",
                    ],
                  },
                  "kind": "expression",
                  "type": {
                    "kind": "integer",
                    "nullable": false,
                  },
                },
              ],
            },
          },
        ],
        "entrypoints": [],
        "name": "",
        "target": {
          "alias": "$target_1",
          "identifyWith": {
            "name": "id",
            "paramName": "repo_id",
            "refKey": "Repo.id",
            "type": "integer",
          },
          "kind": "relation",
          "name": "repos",
          "namePath": [
            "Org",
            "repos",
          ],
          "retType": "Repo",
        },
      },
    ],
    "name": "",
    "target": {
      "alias": "org",
      "identifyWith": {
        "name": "slug",
        "paramName": "org_slug",
        "refKey": "Org.slug",
        "type": "text",
      },
      "kind": "model",
      "name": "Org",
      "namePath": [
        "Org",
      ],
      "retType": "Org",
    },
  },
]
`;

exports[`entrypoint composes single cardinality 1`] = `
{
  "endpoints": [
    {
      "authSelect": [],
      "authorize": undefined,
      "kind": "get",
      "parentContext": [
        {
          "alias": "$target_0",
          "identifyWith": {
            "name": "id",
            "paramName": "user_id",
            "refKey": "User.id",
            "type": "integer",
          },
          "kind": "model",
          "name": "User",
          "namePath": [
            "User",
          ],
          "retType": "User",
          "select": [],
        },
      ],
      "response": [
        {
          "alias": "id",
          "kind": "field",
          "name": "id",
          "namePath": [
            "User",
            "address",
            "id",
          ],
          "refKey": "Address.id",
        },
        {
          "alias": "name",
          "kind": "field",
          "name": "name",
          "namePath": [
            "User",
            "address",
            "name",
          ],
          "refKey": "Address.name",
        },
      ],
      "target": {
        "alias": "$target_1",
        "identifyWith": undefined,
        "kind": "reference",
        "name": "address",
        "namePath": [
          "User",
          "address",
        ],
        "retType": "Address",
        "select": [],
      },
    },
    {
      "actions": [
        {
          "alias": "$action_0",
          "changeset": [
            {
              "name": "name",
              "setter": {
                "fieldsetAccess": [
                  "name",
                ],
                "kind": "fieldset-input",
                "required": false,
                "type": "text",
              },
            },
          ],
          "filter": undefined,
          "isPrimary": true,
          "kind": "update-one",
          "model": "Address",
          "select": [],
          "targetPath": [
            "$target_1",
          ],
        },
      ],
      "authSelect": [],
      "authorize": undefined,
      "fieldset": {
        "kind": "record",
        "nullable": false,
        "record": {
          "name": {
            "kind": "field",
            "nullable": false,
            "required": false,
            "type": "text",
            "validators": [],
          },
        },
      },
      "kind": "update",
      "parentContext": [
        {
          "alias": "$target_0",
          "identifyWith": {
            "name": "id",
            "paramName": "user_id",
            "refKey": "User.id",
            "type": "integer",
          },
          "kind": "model",
          "name": "User",
          "namePath": [
            "User",
          ],
          "retType": "User",
          "select": [],
        },
      ],
      "response": [
        {
          "alias": "id",
          "kind": "field",
          "name": "id",
          "namePath": [
            "User",
            "address",
            "id",
          ],
          "refKey": "Address.id",
        },
        {
          "alias": "name",
          "kind": "field",
          "name": "name",
          "namePath": [
            "User",
            "address",
            "name",
          ],
          "refKey": "Address.name",
        },
      ],
      "target": {
        "alias": "$target_1",
        "identifyWith": undefined,
        "kind": "reference",
        "name": "address",
        "namePath": [
          "User",
          "address",
        ],
        "retType": "Address",
        "select": [
          {
            "alias": "id",
            "kind": "field",
            "name": "id",
            "namePath": [
              "User",
              "address",
              "id",
            ],
            "refKey": "Address.id",
          },
        ],
      },
    },
    {
      "actions": [],
      "authSelect": [],
      "authorize": undefined,
      "fieldset": undefined,
      "kind": "custom-one",
      "method": "GET",
      "parentContext": [
        {
          "alias": "$target_0",
          "identifyWith": {
            "name": "id",
            "paramName": "user_id",
            "refKey": "User.id",
            "type": "integer",
          },
          "kind": "model",
          "name": "User",
          "namePath": [
            "User",
          ],
          "retType": "User",
          "select": [],
        },
      ],
      "path": "custom",
      "responds": true,
      "response": undefined,
      "target": {
        "alias": "$target_1",
        "identifyWith": undefined,
        "kind": "reference",
        "name": "address",
        "namePath": [
          "User",
          "address",
        ],
        "retType": "Address",
        "select": [],
      },
    },
  ],
  "entrypoints": [],
  "name": "",
  "target": {
    "alias": "$target_1",
    "identifyWith": undefined,
    "kind": "reference",
    "name": "address",
    "namePath": [
      "User",
      "address",
    ],
    "retType": "Address",
  },
}
`;

exports[`entrypoint composes single cardinality 2`] = `
{
  "endpoints": [
    {
      "actions": [
        {
          "alias": "$action_0",
          "changeset": [
            {
              "name": "name",
              "setter": {
                "fieldsetAccess": [
                  "name",
                ],
                "kind": "fieldset-input",
                "required": true,
                "type": "text",
              },
            },
            {
              "name": "address_id",
              "setter": {
                "kind": "reference-value",
                "target": {
                  "access": [
                    "id",
                  ],
                  "alias": "$target_0",
                },
              },
            },
          ],
          "isPrimary": true,
          "kind": "create-one",
          "model": "User",
          "select": [],
          "targetPath": [
            "user",
          ],
        },
      ],
      "authSelect": [],
      "authorize": undefined,
      "fieldset": {
        "kind": "record",
        "nullable": false,
        "record": {
          "name": {
            "kind": "field",
            "nullable": false,
            "required": true,
            "type": "text",
            "validators": [],
          },
        },
      },
      "kind": "create",
      "parentContext": [
        {
          "alias": "$target_0",
          "identifyWith": {
            "name": "id",
            "paramName": "address_id",
            "refKey": "Address.id",
            "type": "integer",
          },
          "kind": "model",
          "name": "Address",
          "namePath": [
            "Address",
          ],
          "retType": "Address",
          "select": [
            {
              "alias": "id",
              "kind": "field",
              "name": "id",
              "namePath": [
                "Address",
                "id",
              ],
              "refKey": "Address.id",
            },
          ],
        },
      ],
      "response": [
        {
          "alias": "id",
          "kind": "field",
          "name": "id",
          "namePath": [
            "Address",
            "user",
            "id",
          ],
          "refKey": "User.id",
        },
        {
          "alias": "name",
          "kind": "field",
          "name": "name",
          "namePath": [
            "Address",
            "user",
            "name",
          ],
          "refKey": "User.name",
        },
        {
          "alias": "address_id",
          "kind": "field",
          "name": "address_id",
          "namePath": [
            "Address",
            "user",
            "address_id",
          ],
          "refKey": "User.address_id",
        },
      ],
      "target": {
        "alias": "$target_1",
        "kind": "relation",
        "name": "user",
        "namePath": [
          "Address",
          "user",
        ],
        "retType": "User",
        "select": [],
      },
    },
    {
      "authSelect": [],
      "authorize": undefined,
      "kind": "get",
      "parentContext": [
        {
          "alias": "$target_0",
          "identifyWith": {
            "name": "id",
            "paramName": "address_id",
            "refKey": "Address.id",
            "type": "integer",
          },
          "kind": "model",
          "name": "Address",
          "namePath": [
            "Address",
          ],
          "retType": "Address",
          "select": [],
        },
      ],
      "response": [
        {
          "alias": "id",
          "kind": "field",
          "name": "id",
          "namePath": [
            "Address",
            "user",
            "id",
          ],
          "refKey": "User.id",
        },
        {
          "alias": "name",
          "kind": "field",
          "name": "name",
          "namePath": [
            "Address",
            "user",
            "name",
          ],
          "refKey": "User.name",
        },
        {
          "alias": "address_id",
          "kind": "field",
          "name": "address_id",
          "namePath": [
            "Address",
            "user",
            "address_id",
          ],
          "refKey": "User.address_id",
        },
      ],
      "target": {
        "alias": "$target_1",
        "identifyWith": undefined,
        "kind": "relation",
        "name": "user",
        "namePath": [
          "Address",
          "user",
        ],
        "retType": "User",
        "select": [],
      },
    },
    {
      "actions": [
        {
          "alias": "$action_0",
          "changeset": [
            {
              "name": "name",
              "setter": {
                "fieldsetAccess": [
                  "name",
                ],
                "kind": "fieldset-input",
                "required": false,
                "type": "text",
              },
            },
            {
              "name": "address_id",
              "setter": {
                "fieldsetAccess": [
                  "address_id",
                ],
                "kind": "fieldset-input",
                "required": false,
                "type": "integer",
              },
            },
          ],
          "filter": undefined,
          "isPrimary": true,
          "kind": "update-one",
          "model": "User",
          "select": [],
          "targetPath": [
            "$target_1",
          ],
        },
      ],
      "authSelect": [],
      "authorize": undefined,
      "fieldset": {
        "kind": "record",
        "nullable": false,
        "record": {
          "address_id": {
            "kind": "field",
            "nullable": false,
            "required": false,
            "type": "integer",
            "validators": [],
          },
          "name": {
            "kind": "field",
            "nullable": false,
            "required": false,
            "type": "text",
            "validators": [],
          },
        },
      },
      "kind": "update",
      "parentContext": [
        {
          "alias": "$target_0",
          "identifyWith": {
            "name": "id",
            "paramName": "address_id",
            "refKey": "Address.id",
            "type": "integer",
          },
          "kind": "model",
          "name": "Address",
          "namePath": [
            "Address",
          ],
          "retType": "Address",
          "select": [],
        },
      ],
      "response": [
        {
          "alias": "id",
          "kind": "field",
          "name": "id",
          "namePath": [
            "Address",
            "user",
            "id",
          ],
          "refKey": "User.id",
        },
        {
          "alias": "name",
          "kind": "field",
          "name": "name",
          "namePath": [
            "Address",
            "user",
            "name",
          ],
          "refKey": "User.name",
        },
        {
          "alias": "address_id",
          "kind": "field",
          "name": "address_id",
          "namePath": [
            "Address",
            "user",
            "address_id",
          ],
          "refKey": "User.address_id",
        },
      ],
      "target": {
        "alias": "$target_1",
        "identifyWith": undefined,
        "kind": "relation",
        "name": "user",
        "namePath": [
          "Address",
          "user",
        ],
        "retType": "User",
        "select": [
          {
            "alias": "id",
            "kind": "field",
            "name": "id",
            "namePath": [
              "Address",
              "user",
              "id",
            ],
            "refKey": "User.id",
          },
        ],
      },
    },
    {
      "actions": [
        {
          "kind": "delete-one",
          "model": "User",
          "targetPath": [
            "$target_1",
          ],
        },
      ],
      "authSelect": [],
      "authorize": undefined,
      "kind": "delete",
      "parentContext": [
        {
          "alias": "$target_0",
          "identifyWith": {
            "name": "id",
            "paramName": "address_id",
            "refKey": "Address.id",
            "type": "integer",
          },
          "kind": "model",
          "name": "Address",
          "namePath": [
            "Address",
          ],
          "retType": "Address",
          "select": [],
        },
      ],
      "response": undefined,
      "target": {
        "alias": "$target_1",
        "identifyWith": undefined,
        "kind": "relation",
        "name": "user",
        "namePath": [
          "Address",
          "user",
        ],
        "retType": "User",
        "select": [],
      },
    },
    {
      "actions": [],
      "authSelect": [],
      "authorize": undefined,
      "fieldset": undefined,
      "kind": "custom-one",
      "method": "GET",
      "parentContext": [
        {
          "alias": "$target_0",
          "identifyWith": {
            "name": "id",
            "paramName": "address_id",
            "refKey": "Address.id",
            "type": "integer",
          },
          "kind": "model",
          "name": "Address",
          "namePath": [
            "Address",
          ],
          "retType": "Address",
          "select": [],
        },
      ],
      "path": "custom",
      "responds": true,
      "response": undefined,
      "target": {
        "alias": "$target_1",
        "identifyWith": undefined,
        "kind": "relation",
        "name": "user",
        "namePath": [
          "Address",
          "user",
        ],
        "retType": "User",
        "select": [],
      },
    },
  ],
  "entrypoints": [],
  "name": "",
  "target": {
    "alias": "$target_1",
    "identifyWith": undefined,
    "kind": "relation",
    "name": "user",
    "namePath": [
      "Address",
      "user",
    ],
    "retType": "User",
  },
}
`;
